fixed the toggle and removed the extra margin from tha container

--- a/Assets/form.css
+++ b/Assets/form.css
@@ -1,43 +1,191 @@
-*,
+/* *,
 *::before,
 *::after {
   box-sizing: border-box;
-}
+} */
 
 * {
+    
+        box-sizing: border-box;
+        margin:0;
+        padding:0;
+      
     margin: 0;
     padding: 0;
 }
-
-html, body {
-    height:100%;
+header {
+    /* height: 100px; */
+    width: 100%;
+    /* margin: 5px;
+    padding: 25px;
+    display:flex
+    */
+    /* justify-content: right; */
+    margin-bottom: 8px;
+    display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1%;
+  background-color: white;
+  color: #947d7d;
+  margin-bottom:auto;
+  
+    
 }
+
+body {
+    font-family: Arial;
+    margin: 40px;
+    display: flex;
+    flex-direction: column;
+    height:100vh;
+   
+    margin-top: 0px;
+    margin-bottom: 40px;
+    background-color:white;
+    display :flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .container {
+    width: 100%;
+    /* height: 100vh; */
+
+   
+  }
+.dark container {
+  background-color: #111;
+}
+.light .container{
+  background-color: #fff;
+}
+  /* Dark Mode */
+
+.dark {
+    background-color:#243447;
+    /* height: 100vh; */
+    width: 100%;
+    color: #bebebe
+
+   
+  }
+  .dark header {
+    background-color: #f0ead6;
+  }
+  .light header {
+    background-color: #111;
+  }
+  
+  .dark li a {
+    color: #bebebe;
+  }
+  
+  .dark li a:hover {
+    background-color: #111;
+  }
+  
+  /* Light Mode */
+  .light {
+    background-color: #f0ead6;
+    color: black;
+    /* height: 100vh; */
+    width: 100%;
+  }
+  
+  .light li a {
+    color: black;
+  }
+  
+  .light li a:hover {
+    background-color: rgb(29, 128, 210);
+  }
+  /* toggle switch CSS */
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #111;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+/* html, body {
+    height:100%;
+} */
 
 
 h1 {
     color: white;
-    margin: 20px;
+    /* margin: px; */
     font-style: oblique;   
     text-decoration:wavy;
+    display: flex;
+    align-items: center;
+    margin: 10px;
+    justify-content: center;
 }
 
-body {
-    background-color:rgb(160, 155, 155);
-    display :flex;
-    justify-content: center;
-    align-items: center;
-}
-#form-container{
-    width: 900px;
-    height: 450px;
+
+.card{
+    width: 100%;
+    height: 100%;
     background-color: white;
     display: flex;
+    /* margin-bottom:20px; */
 }
 
 img {
     width: 100%;
     height: 100%;
-background-position-y: 80px;;
+background-position-y: 90px;
 }
 
 input {
@@ -47,16 +195,22 @@ input {
     
 }
 
-button {
+#submit {
     border: none;
-    color: orange;
+    
+    background-color: rgb(2, 47, 47);
     padding: 15px 32px;
     text-align: center;
     display: inline-block;
     /* /* /* font-size: 16px; */
     margin: 0px 20px;
+    margin-top: 30px;
+    width: 95%;
     cursor: pointer;
-    float: right;
+    /* float: right; */
+    color: white;
+    font-style:oblique;
+    font-weight: bold;
  } 
   
 
@@ -86,8 +240,8 @@ button {
 }
 #form-section {
     width: 100%;
-    height: 100%;
-    background-color: rgb(217, 198, 198);
+    height: 480px;
+    background-color: rgb(70, 72, 68);
 }
 
 
@@ -108,6 +262,13 @@ flex-direction: column;
     border-color: black;
     
 }
+
+#image-left{
+    width: 80%;
+    height: 480px;
+    background-color: rgb(217, 198, 198);
+} 
+
 input{
     background-color: #f1f3f4;
     border-radius: 2px;
@@ -126,12 +287,7 @@ input{
     vertical-align: middle;
     width: 100%;
 }
-h1 {
-    display: flex;
-    align-items: center;
-    margin: 5%;
-    justify-content: center;
-}
+
 
 input {
     outline: none;
